<?xml version="1.0"?>
<package format="3">
  <name>breakdown_function_handler</name>
  <version>0.0.1</version>
  <description>This is a package for handling breakdown functions.</description>
  <maintainer email="wangyongdong0817@gmail.com">Yongdong Wang</maintainer>
  <license>Apache 2.0</license>

  <depend>breakdown_function_handler_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
